--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "promise-mysql": "^3.3.1",
+    "tcs": "^10.0.0",
     "timeago.js": "^4.0.0"
   },
   "devDependencies": {
