--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "node-localstorage": "^2.1.5",
+    "node-sessionstorage": "^1.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "promise-mysql": "^3.3.1",
